# rules_javascript

./: README.md  WORKSPACE  def.bzl  deps.bzl  rules_javascript.code-workspace
examples/yarn_workspaces/: BUILD.bazel  WORKSPACE  clean.sh
internal/: rules.bzl
javascript/: BUILD  def.bzl  deps.bzl
javascript/private/: BUILD  BUILD.bazel  actions.bzl  generate_build_files.js  js_tool.sh.tpl  providers.bzl  repo.bzl  rules.bzl
javascript/private/builder/: BUILD  builder.js  link.js  minimist.js
tests/: BUILD  BUILD.bazel  bar.js  baz.js  bin_with_libs.js  bin_with_libs_test.sh  data_test.sh  foo.js  hello.js  hello_test.sh  list_data_bin.js  list_data_lib.js  message.js  qux.js
